fapply fix to nav collapse issue and alert message

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,7 +37,7 @@ hr {
     height: 100vh;
     width: 100%;
     margin: auto;
-    z-index: -1;
+    z-index: 1;
     padding: 0px;
     overflow: hidden;
         
@@ -60,6 +60,7 @@ hr {
 
 .jumbotron {
     background-color: transparent;
+    padding: 0px;
 }
 
 .centre_alignment {
@@ -147,6 +148,14 @@ caption p {
     text-align: center;
     padding-top: 95px;
     padding-bottom: 50px;
+}
+
+.col_heading {
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    padding-top: 95px;
+    padding-bottom: 0px;
 }
 
 .socialmedia_icon {
